--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-    "dependencies": {
-      "crypto-js": "^4.1.1",
-      "ws": "^8.13.0"
-    }
+  "dependencies": {
+    "crypto-js": "^4.1.1",
+    "dotenv": "^16.3.1",
+    "ws": "^8.13.0"
   }
-  
+}
